Added Navbar Footer Home page sidebar etc

--- a/src/assets/styles/Global.scss
+++ b/src/assets/styles/Global.scss
@@ -2,3 +2,8 @@
 
 $page-color: grey;
 $text-color: green;
+
+//Footer background
+// $background-foot:linear-gradient(to right, #7b205e,#701657,#5b1444);
+// $background-foot2:linear-gradient(to left, #7b205e,#701657,#5b1444);
+$background-color:#5b1444;
