--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,9 @@ html {
 }
 
 body {
-  background-color: white;
+  background: linear-gradient(to right, #3a0d2c,#2E0A23,#24081b);
+  background: linear-gradient(to bottom, #3a0d2c,#2E0A23,#24081b);
+  // height: 100vh;
   color: $text-color;
   overflow-x: hidden;
 }
