Converted all the pages to react with full responsiveness, added spinner,signup and login

--- a/src/assets/styles/Global.scss
+++ b/src/assets/styles/Global.scss
@@ -1,7 +1,7 @@
 // Global styles
 
 $page-color: grey;
-$text-color: green;
+$text-color: white;
 
 //Footer background
 // $background-foot:linear-gradient(to right, #7b205e,#701657,#5b1444);
