--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import "/src/assets/styles/Global.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+  // font-family: 'Poppins';
 }
 
 html {
@@ -15,7 +17,6 @@ html {
 body {
   background: linear-gradient(to right, #3a0d2c,#2E0A23,#24081b);
   background: linear-gradient(to bottom, #3a0d2c,#2E0A23,#24081b);
-  // height: 100vh;
   color: $text-color;
   overflow-x: hidden;
 }
