--- a/src/layouts/Sidebar/Sidebar.module.scss
+++ b/src/layouts/Sidebar/Sidebar.module.scss
@@ -7,7 +7,8 @@
     width: 80px;
     padding: 6px 14px;
     z-index: 99;
-    background-color: black;
+    // background-color: black;
+    background-color: rgb(65, 20, 50);
     transition: all .5s ease;
     position: fixed;
     top:0;
@@ -62,6 +63,7 @@
     margin-top: 60px;
     height: 100%;
     background-color: transparent;
+    margin-left: 0px;
 }
 
 .sidebar li{
