--- a/src/layouts/Sidebarmob/Sidebarmob.module.scss
+++ b/src/layouts/Sidebarmob/Sidebarmob.module.scss
@@ -6,7 +6,8 @@
         align-items: center;
         height: 3rem;
         width: 70%;
-        background-color: black;
+        // background-color: black;
+        background-color: rgb(65, 20, 50);
         color: white;
         border-radius: 20px;
         padding-left: 20px;
@@ -18,6 +19,10 @@
         bottom: 3rem;
         left: 15%;
         right: 15%;
+    }
+
+    .sidebarmob .link{
+        color: white;
     }
 
 }
