Added vercel.json and edited background of login and signup

--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,6 +1,6 @@
 .container{
     height: 100vh;
-    background-image: url(https://uploads-ssl.webflow.com/66096a30ae498a9206aee6a0/66164858ebb1b03d5010d160_1.jpg);
+    background-image: url('https://uploads-ssl.webflow.com/66786a63d690c3f1f930bd0e/66786a7b8c200395f1c3d808_image%20(1).jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
