--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -32,18 +32,6 @@
     text-align: center;
 }
 
-.video{
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100vh;
-	object-fit: cover;
-	padding: 0px;
-	margin: 0px;
-	opacity: 0.3;
-}
-
 .inputbox label{
     font-weight: 600;
 }
@@ -53,7 +41,7 @@
     padding: 0.5rem;
     width: 100%;
     margin-top: 5px;
-    color: white;
+    color: black;
 }
 
 .logbut{
