--- a/src/pages/Signup/Signup.module.scss
+++ b/src/pages/Signup/Signup.module.scss
@@ -39,20 +39,7 @@
     padding: 0.5rem;
     width: 100%;
     margin-top: 5px;
-    color: white;
-}
-
-
-.video{
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	padding: 0px;
-	margin: 0px;
-	opacity: 0.3;
+    color: black;
 }
 
 .signbut{
@@ -98,8 +85,9 @@
     height: 2rem;
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    color: grey;
+    color: black;
 }
+
 
 .year{
     margin-right: 1rem;
@@ -107,6 +95,8 @@
 
 .branch{
     margin-top: 5px;
+    width: 100%;
+    padding-left: 0.5rem;
 }
 
 
